repair format and visibility of the modal

--- a/views/assets/sass/base/_bases.scss
+++ b/views/assets/sass/base/_bases.scss
@@ -122,47 +122,33 @@ strong, b{
 }
 .statusPoint_transac{
 	position: relative;
+	display: flex;
+  flex-flow: nowrap row;
+  align-items: center;
+  justify-content: flex-start;
 	&__pending{
-		margin-left: 1rem;
-		&:before{
-		  content: "";
-	    position: absolute;
-	    width: 10px;
-	    height: 10px;
-	    background-color: #ff0;
-	    top: 50%;
-	    left: 0;
-	    transform: translateY(-50%);
-	    border-radius: 50%;
-		}
+		margin-right: 1rem;
+	  min-width: 10px;
+	  width: 10px;
+	  height: 10px;
+	  background-color: #ff0;
+	  border-radius: 50%;
 	}
 	&__completed{
-		margin-left: 1rem;
-		&:before{
-		  content: "";
-	    position: absolute;
-	    width: 10px;
-	    height: 10px;
-	    background-color: lightgreen;
-	    top: 40%;
-	    left: 0;
-	    transform: translateY(-50%);
-	    border-radius: 50%;
-		}
+		margin-right: 1rem;
+    min-width: 10px;
+    width: 10px;
+    height: 10px;
+    background-color: lightgreen;
+    border-radius: 50%;
 	}
 	&__cancel{
-		margin-left: 1rem;
-		&:before{
-		  content: "";
-	    position: absolute;
-	    width: 10px;
-	    height: 10px;
-	    background-color: red;
-	    top: 40%;
-	    left: 0;
-	    transform: translateY(-50%);
-	    border-radius: 50%;
-		}
+		margin-right: 1rem;
+    min-width: 10px;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
 	}
 }
 .btn_ItemEditReg{
@@ -2097,6 +2083,7 @@ strong, b{
 	thead{
 		border: none;
 		tr{
+			background-color: transparent;
 			border: none;
 			th{
 				border: none;
@@ -2105,11 +2092,17 @@ strong, b{
 		}
 	}
 	tbody{
+		border-radius: 0 0 6px 6px;
 		tr{
+			background-color: transparent;
 			td{
 				padding: 0.95rem;
 				border-top: 1px solid #eee;
 			}
+		}
+
+		tr:last-child{
+			border-radius: 0 0 6px 6px;
 		}
 	}
 }
